--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
+    "firebase": "^12.4.0",
     "jszip": "^3.10.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
