--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.9.4",
+    "sweetalert2": "^11.26.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
